@@ -21,6 +21,7 @@
 #include "SVNRev.h"
 #include "HistoryCombo.h"
 #include "Tooltip.h"
+#include "XPImageButton.h"
 
 class CRepositoryTree;
 
@@ -32,6 +33,7 @@ class IRepo
 {
 public:
 	virtual bool ChangeToUrl(CString& url, SVNRev& rev, bool bAlreadyChecked) = 0;
+	virtual CString GetRepoRoot() = 0;
 };
 
 /**
@@ -96,6 +98,7 @@ public:
 	void SetIRepo(IRepo * pRepo) {m_pRepo = pRepo;}
 
 	void SetHeadRevision(const SVNRev& rev) {m_headRev = rev;}
+	afx_msg void OnGoUp();
 protected:
 	virtual BOOL PreTranslateMessage(MSG* pMsg);
 	afx_msg void OnCbnSelChange();
@@ -119,9 +122,11 @@ private:
 	} m_cbxUrl;
 
 	CButton m_btnRevision;
+	CXPImageButton m_btnUp;
 
 	SVNRev	m_headRev;
 	CToolTips m_tooltips;
+	HICON	m_UpIcon;
 };
 
 
