@@ -1908,6 +1908,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Resources\up.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\up.ico"
+				>
+			</File>
+			<File
 				RelativePath="..\Resources\UpdateBackground.ico"
 				>
 			</File>
